surreal-orm-tests/tests/snapshots/node_attributes__node_full_table_attributes.snap
---
source: surreal-orm-tests/tests/node_attributes.rs
expression: "StudentFnAttrs::define_table().to_raw().build()"
---
DEFINE TABLE student_fn_attrs DROP FLEXIBLE SCHEMAFULL AS 
	SELECT * FROM student
PERMISSIONS
FOR select, update
	WHERE firstName IS 'Oyedayo'
FOR create, delete
	WHERE ageInlineExpr <= 57;
